Fix T64072:  DynamicPaint: Bake failed: Canvas mesh not updated

Baking is to happen form within an evaluated scene.